# sfc-rs

./: .bumpversion.toml  .gitignore  AUTHORS.adoc  CHANGELOG.adoc  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Cargo.toml  README.md  clippy.toml  justfile  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  dependabot_auto_merge.yaml
LICENSES/: MIT.txt
benches/: sfc32.rs  sfc64.rs
examples/: README.adoc  output.rs  random.rs
src/: lib.rs  sfc32.rs  sfc64.rs
