# SPDX-FileCopyrightText: 2025 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "rand_sfc"
version = "0.1.4"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "Chris Doty-Humphrey's SFC PRNGs"
documentation = "https://docs.rs/rand_sfc"
readme = "README.md"
repository = "https://github.com/sorairolake/sfc-rs"
license = "Apache-2.0 OR MIT"
keywords = ["random", "rng", "sfc"]
categories = ["algorithms", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
rand_core = "0.9.3"
serde = { version = "1.0.219", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
anyhow = "1.0.98"
byte-unit = "5.1.6"
clap = { version = "4.5.37", features = ["derive"] }
rand_core = { version = "0.9.3", features = ["os_rng"] }
serde_json = "1.0.140"

[features]
serde = ["dep:serde"]

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
